# Adaptyst

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-alma  Dockerfile-alma9  README.md  REUSE.toml  adaptyst-config.cmake.in  apptainer-alma.def  apptainer-alma9.def  apptainer.def  build.sh  build_server.sh  clean.sh  config_setup.sh  install.sh
.github/workflows/: lcg.yaml
docs/: Doxyfile  MAINPAGE.md  diagrams.css
include/: archive.hpp  cmd.hpp  common.hpp  entrypoint.hpp  identifiable.hpp  ir.hpp  print.hpp  system.hpp  workflow.hpp
include/adaptyst/: amod_t.h  hw.h  hw_inject.h  inject.h  inject_errors.h  os_detect.h  os_detect.hpp  output.hpp  process.hpp  socket.hpp
src/: archive.cpp  archive.hpp  common.hpp  entrypoint.cpp  entrypoint.hpp  inject.cpp  ir.cpp  main.cpp  print.cpp  print.hpp  process.cpp  process.hpp  profilers.cpp  profilers.hpp  profiling.cpp  profiling.hpp  requirements.cpp  requirements.hpp  system.cpp  version.cpp.in  workflow.cpp
src/cmd/: cmd.hpp
src/scripts/: adaptyst-process.py  adaptyst-syscall-process.py  compile_sdfg.py  gen_sdfg.py  install.sh
src/server/: client.cpp  entrypoint.cpp  entrypoint.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  subclient.cpp
src/utils/: adaptyst-code.py
test/server/: consts.hpp  mocks.hpp  test_client.cpp  test_server.cpp  test_socket.cpp  test_subclient.cpp
